<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radius_pick_line"
        android:weightSum="8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"
            android:id="@+id/radius_pick_text"
            android:text="Radius: " />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/radius_pick"
            android:layout_weight="5"
            android:layout_margin="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fuel_type_pick_line"
        android:layout_below="@id/radius_pick_line"
        android:weightSum="8">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"
            android:text="Fuel type: " />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_margin="12dp"
            android:id="@+id/fuel_spinner"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fuel_type_pick_line">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view_stations"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:id="@+id/station_loading_progress_bar"/>

        <TextView
            android:id="@+id/empty_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No stations with given criteria. Try another search!"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>